2006-01-31  Zoltan Varga  <vargaz@gmail.com>

	* String.cs: Implement one of the new net 2.0 Split methods.

2006-01-31  Atsushi Enomoto  <atsushi@ximian.com>

	* String.cs : (LastIndexOf) Fixed bug #77412. It should not expect
	  that value length is bigger than its index.

2006-01-27  Zoltan Varga  <vargaz@gmail.com>

	* DateTime.cs: Add some 2.0 methods and properties.

2006-01-19 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Console.cs: if InternalCodePage returns -1, use the default encoding.
	Also match the UTF8 one properly. Patch by wall_john@sohu.com.

2006-01-05  Raja R Harinath  <rharinath@novell.com>

	Fix regressions introduced by the fix to #71300.
	* Activator.cs (CreateInstance): Use Binder.SelectMethod instead
	of home-grown FindBestCtor.
	(FindBestCtor): Delete.

2006-01-03  Zoltan Varga  <vargaz@gmail.com>

	* Nullable.cs: Update to Net 2.0 RTM.
	
	* Nullable.cs: Add comments about runtime dependencies on the layout of
	this type.

2006-01-02  Sebastien Pouliot  <sebastien@ximian.com>

	* Activator.cs: Now find the best ctor when null are used for 
	paramaters. Fix bug #71300. Added checks for specific types (void,
	TypedReference, ArgIterator and RuntimeArgumentHandle).
	* Console.cs: Re-use Environment logic to detect Windows.
	* Type.cs: Re-applied r45150 as the real bug was in Activator.

2006-01-02  Zoltan Varga  <vargaz@gmail.com>

	* Activator.cs: Add a 'params' to one of the CreateInstance overloads.

	* RuntimeTypeHandle.cs RuntimeMethodHandle.cs RuntimeFieldHandle.cs:
	Add == and != operators.

2005-12-23  Sebastien Pouliot  <sebastien@ximian.com>

	* Environment.cs: Bump corlib version to 46.
	* TimeZone.cs: Partial fix for #76094. Added [Serializable] attribute 
	and renamed internal CurrentTimeZone class to CurrentSystemTimeZone 
	(like MS). This allows serialization roundtrip to work in Mono but 
	there's still an issue when deserializing a stream from MS. 

2005-12-23  Sebastien Pouliot  <sebastien@ximian.com> 
 