@@ -1,3 +1,9 @@
+2006-02-10  Zoltan Varga  <vargaz@gmail.com>
+
+	* Array.cs: Fix some methods which previously returned Nullable<T>.
+
+	* Nullable.cs: Add T: struct constraint and fix constructor.
+
 2006-01-31  Zoltan Varga  <vargaz@gmail.com>
 
 	* String.cs: Implement one of the new net 2.0 Split methods.
